--- a/Code/Framework/AzToolsFramework/AzToolsFramework/UI/DocumentPropertyEditor/OutlinerDPE.ui
+++ b/Code/Framework/AzToolsFramework/AzToolsFramework/UI/DocumentPropertyEditor/OutlinerDPE.ui
@@ -15,8 +15,18 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="AzToolsFramework::EntityOutlinerSearchWidget" name="m_searchWidget">
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="AzToolsFramework::EntityOutlinerSearchWidget" name="m_searchWidget" native="true"/>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_sortOptions">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="AzToolsFramework::DocumentPropertyEditor" name="m_dpe">
