--- a/Code/Framework/AzToolsFramework/AzToolsFramework/UI/DocumentPropertyEditor/OutlinerDPE.ui
+++ b/Code/Framework/AzToolsFramework/AzToolsFramework/UI/DocumentPropertyEditor/OutlinerDPE.ui
@@ -21,6 +21,12 @@
      </item>
      <item>
       <widget class="QToolButton" name="m_sortOptions">
+       <property name="styleSheet">
+        <string notr="true">QToolButton
+{
+    qproperty-icon: url(:/stylesheet/img/UI20/menu-centered.svg);
+}</string>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
